# gtkshell

./: .gitignore  CMakeLists.txt  Makefile  README.md  bind.cpp  bind.h  clock.cpp  clock.h  datetime.h  dbus.h  graph.cpp  graph.h  hyprland.cpp  hyprland.h  main.cpp  main.h  mpris.cpp  mpris.h  network.h  notifications.cpp  notifications.h  scroll.cpp  scroll.h  shellwindow.cpp  shellwindow.h  systemtray.cpp  systemtray.h  utils.cpp  utils.h  weather.cpp  weather.h  widgets.cpp  widgets.h  wireplumber.cpp  wireplumber.h
config/: config_hyprland.json  config_scroll.json  style.css
config/calendar/: anniversary.txt  birthday.txt  holiday.txt
